--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 .DS_Store
 node_modules/
 coverage/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
+
+# Test files
+test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
 
@@ -21,6 +29,3 @@ selenium-debug.log
 
 # Design files
 design/
-
-# Compiled files
-dist/
