--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "emoji-js": "^3.4.1",
     "showdown": "^1.9.0",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
