--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-editor",
+  "name": "flavored-markdown",
   "version": "0.1.0",
   "private": false,
   "scripts": {
@@ -12,7 +12,8 @@
     "emoji-js": "^3.4.1",
     "showdown": "^1.9.0",
     "vue": "^2.6.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
@@ -35,14 +36,14 @@
   "main": "src/main.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jlozovei/markdown-editor.git"
+    "url": "git+https://github.com/jlozovei/flavored-markdown.git"
   },
   "author": "Julio Lozovei <jlozovei@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jlozovei/markdown-editor/issues"
+    "url": "https://github.com/jlozovei/flavored-markdown/issues"
   },
-  "homepage": "https://github.com/jlozovei/markdown-editor#readme",
+  "homepage": "https://github.com/jlozovei/flavored-markdown#readme",
   "postcss": {
     "plugins": {
       "autoprefixer": {},
