--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "emoji-js": "^3.4.1",
-    "showdown": "^1.9.0",
+    "marked": "^0.7.0",
     "vue": "^2.6.6",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.1.0"
