update package.json keys

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flavored-markdown",
+  "description": "Markdown in-browser editor with flavors",
   "version": "0.1.0",
   "private": false,
   "scripts": {
@@ -41,7 +42,7 @@
     "type": "git",
     "url": "git+https://github.com/jlozovei/flavored-markdown.git"
   },
-  "author": "Julio Lozovei <jlozovei@gmail.com>",
+  "author": "Julio Lozovei <jlozovei@gmail.com> (https://jlozovei.dev)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jlozovei/flavored-markdown/issues"
