--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "flavored-markdown",
-  "description": "Markdown editor with flavors",
   "version": "0.1.0",
   "private": false,
+  "description": "Markdown editor with flavors",
+  "author": "Julio Lozovei <jlozovei@gmail.com> (https://jlozovei.dev)",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "start": "vue-cli-service serve",
-    "predeploy": "npm run build && cp README.md ./dist",
-    "deploy": "gh-pages -d dist",
-    "postdeploy": "rm -rf dist"
+    "build": "vue-cli-service build",
+    "postbuild": "cp README.md ./dist",
+    "lint": "vue-cli-service lint"
   },
+  "main": "src/main.js",
   "dependencies": {
     "emoji-js": "^3.4.1",
     "marked": "^0.7.0",
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-eslint": "^10.0.1",
@@ -37,17 +37,6 @@
     "rucksack-css": "^1.0.2",
     "vue-template-compiler": "^2.5.21"
   },
-  "main": "src/main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jlozovei/flavored-markdown.git"
-  },
-  "author": "Julio Lozovei <jlozovei@gmail.com> (https://jlozovei.dev)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jlozovei/flavored-markdown/issues"
-  },
-  "homepage": "https://github.com/jlozovei/flavored-markdown#readme",
   "postcss": {
     "plugins": {
       "autoprefixer": {},
@@ -63,5 +52,14 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/jlozovei/flavored-markdown/issues"
+  },
+  "homepage": "https://github.com/jlozovei/flavored-markdown#readme",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jlozovei/flavored-markdown.git"
+  }
 }
