--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
   "dependencies": {
     "emoji-js": "^3.4.1",
     "marked": "^0.7.0",
-    "vue": "^2.6.6",
+    "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
-    "vuex": "^3.0.1",
-    "vuex-persist": "^2.1.0"
+    "vuex": "^3.6.0",
+    "vuex-persist": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.12.11",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
-    "@vue/cli-service": "^4.3.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@vue/test-utils": "^1.1.2",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "^25.5.1",
     "cssnano": "^4.1.10",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "jest": "^25.2.6",
-    "postcss-custom-properties": "^9.0.2",
+    "jest": "^25.5.4",
+    "postcss-custom-properties": "^9.2.0",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-preset-env": "^6.7.0",
     "precss": "^4.0.0",
     "rucksack-css": "^1.0.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.12"
   },
   "postcss": {
     "plugins": {
