--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flavored-markdown",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": false,
   "description": "In-browser markdown editor with flavors",
   "author": "Julio Lozovei <jlozovei@gmail.com> (https://jlozovei.dev)",
@@ -16,6 +16,7 @@
   "dependencies": {
     "emoji-js": "^3.4.1",
     "marked": "^0.7.0",
+    "v-clipboard": "^2.2.3",
     "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
     "vuex": "^3.6.0",
