--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/vue": "^5.6.1",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-plugin-unit-jest": "^4.5.11",
@@ -36,6 +38,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^25.5.4",
+    "jest-dom": "^4.0.0",
     "postcss-custom-properties": "^9.2.0",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-preset-env": "^6.7.0",
